@@ -1,3 +1,9 @@
+2011-01-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Adding a feature which is converting a tabulator separated list into
+   a LaTeX-like table.
+
+
 2011-01-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Correction of some typos (Thanks to André Glória for reporting)
